# pypsa-pl

./: .gitignore  IMPORTANT.md  LICENSE  README.md  prepare_input_files.py  pyproject.toml  requirements.txt  run_pypsa_lopf.py
data/input/: aggregate_units;source=baseline.xlsx  aggregate_units;source=baseline_copper_plate.xlsx  aggregate_units;source=instrat_ambitious.xlsx  aggregate_units;source=instrat_ambitious_copper_plate.xlsx  annual_energy_flows;variant=constraints.csv  annual_energy_flows;variant=historical.csv  annual_energy_flows;variant=instrat_projection.csv  annual_energy_flows;variant=neighbours.csv  buses;source=voivodeships.xlsx  capacity_addition_potentials;variant=instrat_projection.csv  capacity_investments;source=pypsa_pl_v2_copper_plate.xlsx  capacity_max_growth;source=baseline.xlsx  capacity_max_growth;source=instrat_2022.xlsx  capacity_max_growth;source=instrat_ambitious.xlsx  capacity_potentials;source=baseline.xlsx  capacity_potentials;source=instrat_2021.xlsx  capacity_potentials;source=instrat_ambitious.xlsx  capacity_utilisation;variant=historical.csv  capacity_utilisation;variant=instrat_projection.csv  capacity_utilisation;variant=neighbours.csv  combustion_units;source=energy.instrat.pl.xlsx  demand;source=PSE_2022.xlsx  exogenous_demand;source=PSE_2022.xlsx  exogenous_demand;source=baseline.xlsx  exogenous_demand;source=baseline_copper_plate.xlsx  exogenous_demand;source=instrat_ambitious.xlsx  exogenous_demand;source=instrat_ambitious_copper_plate.xlsx  fuel_potentials;source=instrat_2021.xlsx  hydro_utilization;source=entsoe_2020.xlsx  installed_capacity;variant=historical+instrat_projection.csv  installed_capacity;variant=historical_totals.csv  installed_capacity;variant=instrat_main_2024.csv  (+33 more)
inputs/: buses.xlsx  capacity_factors.xlsx  installed_capacity_distribution.xlsx  lines.xlsx  load_decomposition_over_voivodeships_2019.xlsx  load_hour_factors_2019.xlsx
notebooks/: pypsa_pl_mini_capex_all.ipynb  pypsa_pl_mini_capex_power.ipynb  pypsa_pl_mini_opex_power.ipynb
scripts/: capacity_factors.py  create_date_index.py  cross_border_flow.py  distribute_over_buses.py  download_input_data.py  export_results.py  import_data_to_pypsa.py  lines_buses.py  run_default.py  run_pypsa_pl_v2.py
(+146 files in other folders)
