[tool.poetry]
name = "pypsa-pl"
version = "3.0.0"
description = "PyPSA-PL: optimisation model of the Polish energy system"
authors = [
    "Patryk Kubiczek <patryk.kubiczek@instrat.pl>",
    "Kajetan Nowak <kajetan.nowak@instrat.pl>",   
]
license = "MIT"
readme = "README.md"
packages = [{include = "pypsa_pl", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.0"
gspread = "5.12.4"
pyarrow = "^15.0.0"
python-dateutil = "2.9.0"
xarray = "2024.2.0"
matplotlib = "^3.8.3"
notebook = "^7.1.2"
ipywidgets = "^8.1.2"
linopy = "0.3.8"
pypsa = {git = "https://github.com/PyPSA/PyPSA", rev = "b1e15c7"}
highspy = "^1.7.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

